<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/index"
    android:orientation="vertical" >   
    
    <ImageView
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="2sp"
        android:contentDescription="Home Screen of UB"
        android:src="@drawable/school" />
    
 <ScrollView 
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/index"
    android:orientation="vertical" >   

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/infohead"
        android:textSize="20sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/infohead1"
        android:textColor="@android:color/primary_text_light" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="431.19"
        android:text="@string/infohead2"
        android:textColor="@android:color/primary_text_light" />
    
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="431.19"
        android:text="@string/infohead3"
        android:textColor="@android:color/primary_text_light" />
    
       
  </LinearLayout>
</ScrollView>
</LinearLayout>