<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/index"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="1sp"
        android:contentDescription="Home Screen of UB"
        android:src="@drawable/school" />
    
<ScrollView 
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/index"
    android:orientation="vertical" >

    

    <Button
        android:id="@+id/info"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/info"
         />
    
    <Button
        android:id="@+id/gist"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Gist"
         />
    <Button
        android:id="@+id/resource"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/resource"/>
    <Button
        android:id="@+id/courses"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/course"/>
    
    <Button
        android:id="@+id/pastquest"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Past Questions"/>
    
    <Button
        android:id="@+id/files"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Usefull Links"/>
    

</LinearLayout>
</ScrollView>
</LinearLayout>